@@ -16,6 +16,8 @@
 
 package org.jetbrains.kotlin.daemon
 
+import com.intellij.openapi.util.io.FileUtil
+import com.intellij.openapi.util.io.FileUtilRt
 import junit.framework.TestCase
 import org.jetbrains.kotlin.cli.AbstractCliTest
 import org.jetbrains.kotlin.cli.common.messages.MessageRenderer
@@ -26,6 +28,7 @@ import org.jetbrains.kotlin.daemon.common.*
 import org.jetbrains.kotlin.integration.KotlinIntegrationTestBase
 import org.jetbrains.kotlin.progress.CompilationCanceledStatus
 import org.jetbrains.kotlin.test.KotlinTestUtils
+import org.jetbrains.kotlin.utils.KotlinPaths
 import java.io.ByteArrayOutputStream
 import java.io.File
 import java.io.PrintStream
@@ -37,12 +40,14 @@ import java.rmi.server.UnicastRemoteObject
 import java.util.concurrent.CountDownLatch
 import java.util.concurrent.TimeUnit
 import kotlin.concurrent.thread
-import kotlin.script.dependencies.*
-import kotlin.script.experimental.dependencies.*
+import kotlin.script.dependencies.Environment
+import kotlin.script.dependencies.ScriptContents
+import kotlin.script.experimental.dependencies.DependenciesResolver
 import kotlin.script.experimental.dependencies.DependenciesResolver.ResolveResult
+import kotlin.script.experimental.dependencies.ScriptDependencies
+import kotlin.script.experimental.dependencies.asSuccess
 import kotlin.script.templates.ScriptTemplateDefinition
 import kotlin.test.fail
-
 
 val TIMEOUT_DAEMON_RUNNER_EXIT_MS = 10000L
 
@@ -50,11 +55,23 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
 
     data class CompilerResults(val resultCode: Int, val out: String)
 
-    val compilerClassPath = listOf(
-            File(KotlinIntegrationTestBase.getCompilerLib(), "kotlin-compiler.jar"))
+    val compilerClassPath = getKotlinPaths().classPath(KotlinPaths.ClassPaths.Compiler)
+
+    val compilerWithScriptingClassPath = getKotlinPaths().classPath(KotlinPaths.ClassPaths.CompilerWithScripting)
+
     val daemonClientClassPath = listOf( File(KotlinIntegrationTestBase.getCompilerLib(), "kotlin-daemon-client.jar"),
                                         File(KotlinIntegrationTestBase.getCompilerLib(), "kotlin-compiler.jar"))
     val compilerId by lazy(LazyThreadSafetyMode.NONE) { CompilerId.makeCompilerId(compilerClassPath) }
+
+    val compilerWithScriptingId by lazy(LazyThreadSafetyMode.NONE) {
+        CompilerId.makeCompilerId(compilerWithScriptingClassPath)
+    }
+
+    override fun shouldContainTempFiles(): Boolean = true
+
+    // Using tmpDir from TestCaseWithTmpdir leads to the file paths with >255 chars (see e.g. #KT-32490), while KtUsefulTestCase already
+    // setups a separate temp dir for each tests, if shouldContainTempFiles() returns true. Therefore current temp dir is used directly
+    val testTempDir = File(FileUtilRt.getTempDirectory())
 
     private fun compileOnDaemon(clientAliveFile: File, compilerId: CompilerId, daemonJVMOptions: DaemonJVMOptions, daemonOptions: DaemonOptions, vararg args: String): CompilerResults {
         val daemon = KotlinCompilerClient.connectToCompileService(compilerId, clientAliveFile, daemonJVMOptions, daemonOptions, DaemonReportingTargets(out = System.err), autostart = true)
@@ -81,7 +98,7 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
     private fun run(logName: String, vararg args: String): Int = runJava(getTestBaseDir(), logName, *args)
 
     fun makeTestDaemonOptions(testName: String, shutdownDelay: Int = 5) =
-            DaemonOptions(runFilesPath = File(tmpdir, testName).absolutePath,
+            DaemonOptions(runFilesPath = File(testTempDir, testName).absolutePath,
                                       shutdownDelayMilliseconds = shutdownDelay.toLong(),
                                       verbose = true,
                                       reportPerf = true)
@@ -110,7 +127,7 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
                 var daemonShotDown = false
 
                 try {
-                    val jar = tmpdir.absolutePath + File.separator + "hello.jar"
+                    val jar = testTempDir.absolutePath + File.separator + "hello.jar"
                     runDaemonCompilerTwice(flagFile, compilerId, daemonJVMOptions, daemonOptions,
                                            "-include-runtime", File(getTestBaseDir(), "hello.kt").absolutePath, "-d", jar)
 
@@ -142,14 +159,14 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
     fun testDaemonJvmOptionsParsing() {
         val backupJvmOptions = System.getProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY)
         try {
-            System.setProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, "-aaa,-bbb\\,ccc,-ddd,-Xmx200m,-XX:MaxPermSize=10k,-XX:ReservedCodeCacheSize=100,-xxx\\,yyy")
+            System.setProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, "-aaa,-bbb\\,ccc,-ddd,-Xmx200m,-XX:MaxMetaspaceSize=10k,-XX:ReservedCodeCacheSize=100,-xxx\\,yyy")
             val opts = configureDaemonJVMOptions(inheritMemoryLimits = false, inheritAdditionalProperties = false, inheritOtherJvmOptions = false)
             assertEquals("200m", opts.maxMemory)
-            assertEquals("10k", opts.maxPermSize)
+            assertEquals("10k", opts.maxMetaspaceSize)
             assertEquals("100", opts.reservedCodeCacheSize)
-            assertEquals(arrayListOf("aaa", "bbb,ccc", "ddd", "xxx,yyy"), opts.jvmParams)
+            assertEquals(arrayListOf("aaa", "bbb,ccc", "ddd", "xxx,yyy", "ea"), opts.jvmParams)
 
-            System.setProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, "-Xmx300m,-XX:MaxPermSize=10k,-XX:ReservedCodeCacheSize=100")
+            System.setProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, "-Xmx300m,-XX:MaxMetaspaceSize=10k,-XX:ReservedCodeCacheSize=100")
             val opts2 = configureDaemonJVMOptions(inheritMemoryLimits = false, inheritAdditionalProperties = false, inheritOtherJvmOptions = false)
             assertEquals("300m", opts2.maxMemory)
             assertEquals( -1, DaemonJVMOptionsMemoryComparator().compare(opts, opts2))
@@ -167,6 +184,53 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
         finally {
             restoreSystemProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, backupJvmOptions)
         }
+    }
+
+    fun testDaemonAssertsOptions() {
+        val allAssetionsArgs = setOf(
+            "-ea", "-enableassertions",
+            "-da", "-disableassertions",
+            "-esa", "-enablesystemassertions",
+            "-dsa", "-disablesystemassertions"
+        )
+
+        fun assertionsJvmArgs() = configureDaemonJVMOptions(
+            inheritMemoryLimits = true,
+            inheritOtherJvmOptions = false,
+            inheritAdditionalProperties = true
+        ).mappers.flatMap { it.toArgs("-") }.filter { it in allAssetionsArgs }.joinToString(", ")
+
+        for (assertArgValue in allAssetionsArgs) {
+            withDaemonJvmOptionsSetTo(assertArgValue) {
+                assertEquals(assertArgValue, assertionsJvmArgs())
+            }
+        }
+
+        withDaemonJvmOptionsSetTo(null) {
+            assertEquals("-ea", assertionsJvmArgs())
+        }
+    }
+
+    private fun withDaemonJvmOptionsSetTo(newValue: String?, fn: () -> Unit) {
+        val backup = getAndSetSystemProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, newValue)
+
+        try {
+            fn()
+        } finally {
+            getAndSetSystemProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, backup)
+        }
+    }
+
+    private fun getAndSetSystemProperty(property: String, newValue: String?): String? {
+        val oldValue = System.getProperty(property)
+
+        if (newValue != null) {
+            System.setProperty(property, newValue)
+        } else {
+            System.clearProperty(property)
+        }
+
+        return oldValue
     }
 
     fun testDaemonOptionsParsing() {
@@ -195,14 +259,14 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
 
                     assertTrue(logFile1.length() == 0L && logFile2.length() == 0L)
 
-                    val jar1 = tmpdir.absolutePath + File.separator + "hello1.jar"
+                    val jar1 = testTempDir.absolutePath + File.separator + "hello1.jar"
                     val res1 = compileOnDaemon(flagFile, compilerId, daemonJVMOptions1, daemonOptions, "-include-runtime", File(getHelloAppBaseDir(), "hello.kt").absolutePath, "-d", jar1)
                     assertEquals("first compilation failed:\n${res1.out}", 0, res1.resultCode)
 
                     logFile1.assertLogContainsSequence("Starting compilation with args: ")
                     assertEquals("expecting '${logFile2.absolutePath}' to be empty", 0L, logFile2.length())
 
-                    val jar2 = tmpdir.absolutePath + File.separator + "hello2.jar"
+                    val jar2 = testTempDir.absolutePath + File.separator + "hello2.jar"
                     val res2 = compileOnDaemon(flagFile, compilerId2, daemonJVMOptions2, daemonOptions, "-include-runtime", File(getHelloAppBaseDir(), "hello.kt").absolutePath, "-d", jar2)
                     assertEquals("second compilation failed:\n${res2.out}", 0, res1.resultCode)
 
@@ -222,7 +286,7 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
 
     fun testDaemonRunError() {
         withFlagFile(getTestName(true), ".alive") { flagFile ->
-            val daemonOptions = DaemonOptions(shutdownDelayMilliseconds = 1, verbose = true, runFilesPath = File(tmpdir, getTestName(true)).absolutePath)
+            val daemonOptions = DaemonOptions(shutdownDelayMilliseconds = 1, verbose = true, runFilesPath = File(testTempDir, getTestName(true)).absolutePath)
 
             val daemonJVMOptions = configureDaemonJVMOptions("-abracadabra", inheritMemoryLimits = false, inheritOtherJvmOptions = false, inheritAdditionalProperties = false)
 
@@ -240,7 +304,7 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
     // TODO: find out how to reliably cause the retry
     fun ignore_testDaemonStartRetry() {
         withFlagFile(getTestName(true), ".alive") { flagFile ->
-            val daemonOptions = DaemonOptions(shutdownDelayMilliseconds = 1, verbose = true, runFilesPath = File(tmpdir, getTestName(true)).absolutePath)
+            val daemonOptions = DaemonOptions(shutdownDelayMilliseconds = 1, verbose = true, runFilesPath = File(testTempDir, getTestName(true)).absolutePath)
 
             val daemonJVMOptions = configureDaemonJVMOptions(inheritMemoryLimits = false, inheritOtherJvmOptions = false, inheritAdditionalProperties = false)
 
@@ -260,7 +324,7 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
 
     fun testDaemonAutoshutdownOnUnused() {
         withFlagFile(getTestName(true), ".alive") { flagFile ->
-            val daemonOptions = DaemonOptions(autoshutdownUnusedSeconds = 1, shutdownDelayMilliseconds = 1, runFilesPath = File(tmpdir, getTestName(true)).absolutePath)
+            val daemonOptions = DaemonOptions(autoshutdownUnusedSeconds = 1, shutdownDelayMilliseconds = 1, runFilesPath = File(testTempDir, getTestName(true)).absolutePath)
 
             withLogFile("kotlin-daemon-test") { logFile ->
                 val daemonJVMOptions = makeTestDaemonJvmOptions(logFile)
@@ -284,7 +348,7 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
 
     fun testDaemonAutoshutdownOnIdle() {
         withFlagFile(getTestName(true), ".alive") { flagFile ->
-            val daemonOptions = DaemonOptions(autoshutdownIdleSeconds = 1, shutdownDelayMilliseconds = 1, runFilesPath = File(tmpdir, getTestName(true)).absolutePath)
+            val daemonOptions = DaemonOptions(autoshutdownIdleSeconds = 1, shutdownDelayMilliseconds = 1, runFilesPath = File(testTempDir, getTestName(true)).absolutePath)
 
             withLogFile("kotlin-daemon-test") { logFile ->
                 val daemonJVMOptions = makeTestDaemonJvmOptions(logFile)
@@ -292,7 +356,7 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
                 val daemon = KotlinCompilerClient.connectToCompileService(compilerId, flagFile, daemonJVMOptions, daemonOptions, DaemonReportingTargets(out = System.err), autostart = true)
                 assertNotNull("failed to connect daemon", daemon)
                 daemon?.registerClient(flagFile.absolutePath)
-                val jar = tmpdir.absolutePath + File.separator + "hello1.jar"
+                val jar = testTempDir.absolutePath + File.separator + "hello1.jar"
                 val strm = ByteArrayOutputStream()
                 val code = KotlinCompilerClient.compile(daemon!!, CompileService.NO_SESSION, CompileService.TargetPlatform.JVM,
                                                         arrayOf("-include-runtime", File(getHelloAppBaseDir(), "hello.kt").absolutePath, "-d", jar),
@@ -316,7 +380,7 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
 
     fun testDaemonGracefulShutdown() {
         withFlagFile(getTestName(true), ".alive") { flagFile ->
-            val daemonOptions = DaemonOptions(autoshutdownIdleSeconds = 1, shutdownDelayMilliseconds = 1, forceShutdownTimeoutMilliseconds = 60000, runFilesPath = File(tmpdir, getTestName(true)).absolutePath)
+            val daemonOptions = DaemonOptions(autoshutdownIdleSeconds = 1, shutdownDelayMilliseconds = 1, forceShutdownTimeoutMilliseconds = 60000, runFilesPath = File(testTempDir, getTestName(true)).absolutePath)
 
             withLogFile("kotlin-daemon-test") { logFile ->
                 val daemonJVMOptions = makeTestDaemonJvmOptions(logFile)
@@ -349,9 +413,9 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
     }
 
     fun testDaemonExitsOnClientFlagDeletedWithActiveSessions() {
-        val daemonOptions = DaemonOptions(autoshutdownIdleSeconds = 1000, shutdownDelayMilliseconds = 1, runFilesPath = File(tmpdir, getTestName(true)).absolutePath)
-        val clientFlag = createTempFile(getTestName(true), "-client.alive")
-        val sessionFlag = createTempFile(getTestName(true), "-session.alive")
+        val daemonOptions = DaemonOptions(autoshutdownIdleSeconds = 1000, shutdownDelayMilliseconds = 1, runFilesPath = File(testTempDir, getTestName(true)).absolutePath)
+        val clientFlag = FileUtil.createTempFile(getTestName(true), "-client.alive")
+        val sessionFlag = FileUtil.createTempFile(getTestName(true), "-session.alive")
         try {
             withLogFile("kotlin-daemon-test") { logFile ->
                 val daemonJVMOptions = makeTestDaemonJvmOptions(logFile)
@@ -375,9 +439,9 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
     }
 
     fun testDaemonExitsOnClientFlagDeletedWithAllSessionsReleased() {
-        val daemonOptions = DaemonOptions(autoshutdownIdleSeconds = 1000, shutdownDelayMilliseconds = 1, runFilesPath = File(tmpdir, getTestName(true)).absolutePath)
-        val clientFlag = createTempFile(getTestName(true), "-client.alive")
-        val sessionFlag = createTempFile(getTestName(true), "-session.alive")
+        val daemonOptions = DaemonOptions(autoshutdownIdleSeconds = 1000, shutdownDelayMilliseconds = 1, runFilesPath = File(testTempDir, getTestName(true)).absolutePath)
+        val clientFlag = FileUtil.createTempFile(getTestName(true), "-client.alive")
+        val sessionFlag = FileUtil.createTempFile(getTestName(true), "-session.alive")
         try {
             withLogFile("kotlin-daemon-test") { logFile ->
                 val daemonJVMOptions = makeTestDaemonJvmOptions(logFile)
@@ -404,9 +468,9 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
     }
 
     fun testDaemonCancelShutdownOnANewClient() {
-        val daemonOptions = DaemonOptions(autoshutdownIdleSeconds = 1000, shutdownDelayMilliseconds = 3000, runFilesPath = File(tmpdir, getTestName(true)).absolutePath)
-        val clientFlag = createTempFile(getTestName(true), "-client.alive")
-        val clientFlag2 = createTempFile(getTestName(true), "-client.alive")
+        val daemonOptions = DaemonOptions(autoshutdownIdleSeconds = 1000, shutdownDelayMilliseconds = 3000, runFilesPath = File(testTempDir, getTestName(true)).absolutePath)
+        val clientFlag = FileUtil.createTempFile(getTestName(true), "-client.alive")
+        val clientFlag2 = FileUtil.createTempFile(getTestName(true), "-client.alive")
         try {
             withLogFile("kotlin-daemon-test") { logFile ->
                 val daemonJVMOptions = makeTestDaemonJvmOptions(logFile)
@@ -447,9 +511,9 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
      *  (the same solution is used in kotlin daemon client - see next commit)
      */
     fun testDaemonExecutionViaIntermediateProcess() {
-        val clientAliveFile = createTempFile("kotlin-daemon-transitive-run-test", ".run")
+        val clientAliveFile = FileUtil.createTempFile("kotlin-daemon-transitive-run-test", ".run")
         val daemonOptions = makeTestDaemonOptions(getTestName(true))
-        val jar = tmpdir.absolutePath + File.separator + "hello.jar"
+        val jar = testTempDir.absolutePath + File.separator + "hello.jar"
         val args = listOf(
                 File(File(System.getProperty("java.home"), "bin"), "java").absolutePath,
                 "-Xmx256m",
@@ -506,7 +570,7 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
 
                 fun runCompile(threadNo: Int) =
                         thread {
-                            val jar = tmpdir.absolutePath + File.separator + "hello.$threadNo.jar"
+                            val jar = testTempDir.absolutePath + File.separator + "hello.$threadNo.jar"
                             val res = KotlinCompilerClient.compile(
                                     daemon!!,
                                     CompileService.NO_SESSION,
@@ -566,13 +630,13 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
                                 ParallelStartParams.connectionFailedErr
                             }
                             ParallelStartParams.performCompilation -> {
-                                val jar = tmpdir.absolutePath + File.separator + "hello.$threadNo.jar"
+                                val jar = testTempDir.absolutePath + File.separator + "hello.$threadNo.jar"
                                 KotlinCompilerClient.compile(
-                                        compileServiceSession!!.compileService,
-                                        compileServiceSession.sessionId,
-                                        CompileService.TargetPlatform.JVM,
-                                        arrayOf(File(getHelloAppBaseDir(), "hello.kt").absolutePath, "-d", jar),
-                                        PrintingMessageCollector(PrintStream(outStreams[threadNo]), MessageRenderer.WITHOUT_PATHS, true))
+                                    compileServiceSession.compileService,
+                                    compileServiceSession.sessionId,
+                                    CompileService.TargetPlatform.JVM,
+                                    arrayOf(File(getHelloAppBaseDir(), "hello.kt").absolutePath, "-d", jar),
+                                    PrintingMessageCollector(PrintStream(outStreams[threadNo]), MessageRenderer.WITHOUT_PATHS, true))
                             }
                             else -> 0 // compilation skipped, assuming - successful
                         }
@@ -677,9 +741,9 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
                 assertNotNull("failed to connect daemon", daemon)
                 daemon?.registerClient(flagFile.absolutePath)
 
-                val file = File(tmpdir, "largeKotlinFile.kt")
+                val file = File(testTempDir, "largeKotlinFile.kt")
                 file.writeText(generateLargeKotlinFile(10))
-                val jar = File(tmpdir, "largeKotlinFile.jar").absolutePath
+                val jar = File(testTempDir, "largeKotlinFile.jar").absolutePath
 
                 var callbackServices: CompilerCallbackServicesFacadeServer? = null
                 callbackServices = CompilerCallbackServicesFacadeServer(compilationCanceledStatus = object : CompilationCanceledStatus {
@@ -691,6 +755,7 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
                     }
                 }, port = SOCKET_ANY_FREE_PORT)
                 val strm = ByteArrayOutputStream()
+                @Suppress("DEPRECATION")
                 val code = daemon!!.remoteCompile(CompileService.NO_SESSION,
                                                   CompileService.TargetPlatform.JVM,
                                                   arrayOf("-include-runtime", file.absolutePath, "-d", jar),
@@ -710,8 +775,31 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
         }
     }
 
+    fun testDaemonReplScriptingNotInClasspathError() {
+        withDaemon(compilerId) { daemon ->
+            var repl: KotlinRemoteReplCompilerClient? = null
+            var isErrorThrown = false
+            try {
+                repl = KotlinRemoteReplCompilerClient(
+                    daemon, null, CompileService.TargetPlatform.JVM, emptyArray(), TestMessageCollector(),
+                    classpathFromClassloader(), ScriptWithNoParam::class.qualifiedName!!
+                )
+                repl.createState()
+            } catch (e: Exception) {
+                TestCase.assertEquals(
+                    "Unable to use scripting/REPL in the daemon: no scripting plugin loaded",
+                    e.message
+                )
+                isErrorThrown = true
+            } finally {
+                repl?.dispose()
+            }
+            TestCase.assertTrue("Expecting exception that scripting plugin is not loaded", isErrorThrown)
+        }
+    }
+
     fun testDaemonReplLocalEvalNoParams() {
-        withDaemon { daemon ->
+        withDaemon(compilerWithScriptingId) { daemon ->
             val repl = KotlinRemoteReplCompilerClient(daemon, null, CompileService.TargetPlatform.JVM,
                                                       emptyArray(),
                                                       TestMessageCollector(),
@@ -726,7 +814,7 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
     }
 
     fun testDaemonReplLocalEvalStandardTemplate() {
-        withDaemon { daemon ->
+        withDaemon(compilerWithScriptingId) { daemon ->
             val repl = KotlinRemoteReplCompilerClient(daemon, null, CompileService.TargetPlatform.JVM, emptyArray(),
                                                       TestMessageCollector(),
                                                       classpathFromClassloader(),
@@ -770,12 +858,12 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
 
     fun testDaemonReplAutoshutdownOnIdle() {
         withFlagFile(getTestName(true), ".alive") { flagFile ->
-            val daemonOptions = DaemonOptions(autoshutdownIdleSeconds = 1, autoshutdownUnusedSeconds = 1, shutdownDelayMilliseconds = 1, runFilesPath = File(tmpdir, getTestName(true)).absolutePath)
+            val daemonOptions = DaemonOptions(autoshutdownIdleSeconds = 1, autoshutdownUnusedSeconds = 1, shutdownDelayMilliseconds = 1, runFilesPath = File(testTempDir, getTestName(true)).absolutePath)
 
             withLogFile("kotlin-daemon-test") { logFile ->
                 val daemonJVMOptions = makeTestDaemonJvmOptions(logFile)
 
-                val daemon = KotlinCompilerClient.connectToCompileService(compilerId, flagFile, daemonJVMOptions, daemonOptions, DaemonReportingTargets(out = System.err), autostart = true)
+                val daemon = KotlinCompilerClient.connectToCompileService(compilerWithScriptingId, flagFile, daemonJVMOptions, daemonOptions, DaemonReportingTargets(out = System.err), autostart = true)
                 assertNotNull("failed to connect daemon", daemon)
 
                 val replCompiler = KotlinRemoteReplCompilerClient(daemon!!, null, CompileService.TargetPlatform.JVM,
@@ -809,7 +897,7 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
         }
     }
 
-    internal fun withDaemon(body: (CompileService) -> Unit) {
+    internal fun withDaemon(compilerId: CompilerId = this.compilerId, body: (CompileService) -> Unit) {
         withFlagFile(getTestName(true), ".alive") { flagFile ->
             val daemonOptions = makeTestDaemonOptions(getTestName(true))
             withLogFile("kotlin-daemon-test") { logFile ->
@@ -882,7 +970,7 @@ fun restoreSystemProperty(propertyName: String, backupValue: String?) {
 }
 
 internal inline fun withFlagFile(prefix: String, suffix: String? = null, body: (File) -> Unit) {
-    val file = createTempFile(prefix, suffix)
+    val file = FileUtil.createTempFile(prefix, suffix)
     try {
         body(file)
     }
@@ -892,7 +980,7 @@ internal inline fun withFlagFile(prefix: String, suffix: String? = null, body: (
 }
 
 internal inline fun withLogFile(prefix: String, suffix: String = ".log", printLogOnException: Boolean = true, body: (File) -> Unit) {
-    val logFile = createTempFile(prefix, suffix)
+    val logFile = FileUtil.createTempFile(prefix, suffix)
     try {
         body(logFile)
     }
